syntax = "proto3";
option java_multiple_files = true;
package com.trzewik.activemq.infrastructure.grpc.information;

message InformationDTO {
    string message = 1;
}
