syntax = "proto3";
option java_multiple_files = true;
package com.trzewik.activemq.interfaces.grpc.information;

message InformationForm {
    string id = 1;
}
